[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/EndRound/end_round.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/bitmaps/nokia.fnt" type="BitmapFont" id=2]

[node name="Node" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="rootContainer" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 640.0

[node name="ColorFrame" type="ColorFrame" parent="rootContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 642.0
color = Color( 0, 0, 0, 0.8 )

[node name="results" type="VBoxContainer" parent="rootContainer"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 0.0
custom_constants/separation = 15
alignment = 1

[node name="player1" type="HBoxContainer" parent="rootContainer/results"]

rect/min_size = Vector2( 75, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 251.0
margin/right = 224.0
margin/bottom = 274.0
alignment = 0

[node name="name" type="Label" parent="rootContainer/results/player1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 28.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count" type="Label" parent="rootContainer/results/player1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 32.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player2" type="HBoxContainer" parent="rootContainer/results"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 289.0
margin/right = 224.0
margin/bottom = 312.0
alignment = 0

[node name="name" type="Label" parent="rootContainer/results/player2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 34.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "P2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count" type="Label" parent="rootContainer/results/player2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 38.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player3" type="HBoxContainer" parent="rootContainer/results"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 327.0
margin/right = 224.0
margin/bottom = 350.0
alignment = 0

[node name="name" type="Label" parent="rootContainer/results/player3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 34.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "P3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count" type="Label" parent="rootContainer/results/player3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 38.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player4" type="HBoxContainer" parent="rootContainer/results"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 365.0
margin/right = 224.0
margin/bottom = 388.0
alignment = 0

[node name="name" type="Label" parent="rootContainer/results/player4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 34.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "P4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count" type="Label" parent="rootContainer/results/player4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 38.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


